--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,56 @@
-.box {
-	margin-top: 20px;
-	height: 100px;
-	border: 2px solid #000;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.box-in{
-	height: 50px;
-	background-color: green;
-	border: 1px solid #000;
+.header {
+	text-align: center;
+	background: #000;
+	height: 60px;
+	width: 100%;
+	position: fixed;
+}
+
+.header a {
+	display: inline-block;
+	margin-right: 40px;
+	margin-top: 20px;
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #fff;
+}
+
+.header a:hover {
+	color: red;
+}
+
+p {
+	padding: 80px;
+/*	position: absolute;
+	margin-top: 80px;*/
+}
+
+body {
+	height: 100vh;
+}
+
+.box {
+	display: block;
+	width: 400px;
+	height: 300px;
+	border: 2px solid #aeaeae;
+	position: relative;
+	left: 50%;
+	margin-left: -150px;
+	top: 50%;
+	margin-top: -200px;
+	padding: 20px 30px;
+	
+}
+
+.box_in {
+	vertical-align: top;
+	display: inline-block;
+	width: 49%
 }
