--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,123 @@
+.opn-reg {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+}
+.opn-bold {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+body {
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  color: #626262;
+}
+input:focus,
+button:focus,
+textarea:focus {
+  outline: none;
+}
+header {
+  height: 100vh;
+  background-color: #f5f5f5;
+  min-height: 700px;
+}
 .main-head {
-	margin-top: 3%;
+  margin-top: 3%;
 }
-
 .main-logo-border {
-	width: 155px;
-	height: 55px;
-	border: 3px solid #706b73;
-	text-align: center;
-	line-height: 49px;
+  width: 155px;
+  height: 55px;
+  border: 3px solid #706b73;
+  text-align: center;
+  line-height: 49px;
 }
-
-.main-logo-border p{
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 600;
-	font-size: 36px;
-	color: #706b73;
-} 
-
+.main-logo-border p {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  font-size: 36px;
+  color: #706b73;
+}
 .main-logo-border p:first-letter {
-	color: #fa9a87;
+  color: #fc7b5d;
 }
-
+.main-text {
+  margin-top: 4%;
+  text-align: center;
+}
+.main-text h1 {
+  font-size: 50px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+.main-text h1 span {
+  color: #fc6744;
+}
+.main-text p {
+  padding-right: 18px;
+  padding-left: 18px;
+}
 .main-nav {
-	text-align: right;
+  text-align: right;
 }
-
 .main-nav-bar {
-	margin-top: 18px;
-	display: inline-block;
+  height: 55px;
+  display: inline-block;
 }
-
-
-.main-nav-bar span{
-	display: block;
-	height: 4px;
-	border-radius: 5px;
-	width: 35px;
-	margin: 3px auto;
-	background-color: #706b73;
+.main-nav-btn {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.main-nav-btn span {
+  display: block;
+  height: 4px;
+  border-radius: 5px;
+  width: 35px;
+  margin: 3px auto;
+  background-color: #706b73;
+}
+.main-form {
+  margin-top: 10%;
+  padding: 35px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 0px 57px 0px rgba(20, 20, 21, 0.2);
+  box-shadow: 0px 0px 57px 0px rgba(20, 20, 21, 0.2);
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
+}
+.main-form-header {
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+.main-form-header span {
+  color: #fc6744;
+}
+.main-form-btn {
+  background-color: #fc6744;
+  color: #ffffff;
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+  font-size: 16px;
+  border: none;
+  padding: 15px 35px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  border-radius: 50px;
+}
+.main-form input,
+.main-form textarea {
+  width: 100%;
+  margin-top: 30px;
+  font-size: 15px;
+  border: none;
+  border-bottom: 1px solid #706b73;
 }
