--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,13 @@ section {
   -o-border-radius: 50px;
   border-radius: 50px;
 }
+.main-form-btn span {
+  font-size: 22px;
+}
+.main-form-btn:hover {
+  -webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.08);
+  box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.08);
+}
 .main-form input,
 .main-form textarea {
   width: 100%;
@@ -160,6 +167,10 @@ section {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+.process-box:hover {
+  -webkit-box-shadow: 0px 0px 35px 0px rgba(20, 20, 21, 0.21);
+  box-shadow: 0px 0px 35px 0px rgba(20, 20, 21, 0.21);
+}
 .process-btn {
   position: absolute;
   left: 50%;
@@ -177,6 +188,10 @@ section {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
+}
+.process-btn:hover {
+  -webkit-box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
+  box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
 }
 .btn-plus {
   vertical-align: middle;
@@ -215,4 +230,49 @@ i.fa-camera-retro {
   -ms-transform: rotate(-15deg);
   -o-transform: rotate(-15deg);
   transform: rotate(-15deg);
+}
+.works-box {
+  height: 360px;
+  position: relative;
+}
+.sugnature {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.sugnature:hover {
+  opacity: 1;
+}
+.sign p {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  font-size: 22px;
+}
+.sign button {
+  border: none;
+  padding: 15px 35px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  border-radius: 50px;
+  background-color: #fc6744;
+}
+.works-row {
+  margin-top: 3%;
 }
