--- a/css/style.less
+++ b/css/style.less
@@ -140,6 +140,13 @@ section {
     		-ms-border-radius: 50px;
     		-o-border-radius: 50px;
     		border-radius: 50px;
+    		span {
+    			font-size: 22px;
+    		}
+    		&:hover {
+    			-webkit-box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.08);
+				box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.08);
+    		}
     	}
     	input, textarea {
     		width: 100%;
@@ -172,6 +179,10 @@ section {
 			margin-top: 20px;
 			margin-bottom: 20px;
 		}
+		&:hover {
+			-webkit-box-shadow: 0px 0px 35px 0px rgba(20, 20, 21, 0.21);
+  			box-shadow: 0px 0px 35px 0px rgba(20, 20, 21, 0.21);
+		}
 	}
 	&-btn {
 		position: absolute;
@@ -189,6 +200,10 @@ section {
 		background-color: @white;
 		.opn-reg;
 		font-size: 16px;
+		&:hover {
+			-webkit-box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);;
+			box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
+		}
 	}
 
 }
@@ -234,6 +249,59 @@ i.fa-camera-retro {
 	-o-transform: rotate(-15deg);
 	transform: rotate(-15deg);
 }
+
+.works-box {
+	height: 360px;
+	position: relative;
+}
+
+.sugnature {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	color: @white;
+	background-color: rgba(0, 0, 0, .8);
+	text-align: center;
+	display: -webkit-flex;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	-webkit-align-items: center;
+	-webkit-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+	&:hover {
+		opacity: 1;
+	}
+}
+
+.sign {
+	p {
+		.opn-bold;
+		font-size: 22px;
+	}
+	button {
+		border: none;
+		padding: 15px 35px;
+		-webkit-border-radius: 50px;
+		-moz-border-radius: 50px;
+		-ms-border-radius: 50px;
+		-o-border-radius: 50px;
+		border-radius: 50px;
+		background-color: @base-red;
+
+	}
+}
+
+.works-row {
+	margin-top: 3%;
+}
+
+
 
 
 
