--- a/css/style.less
+++ b/css/style.less
@@ -17,6 +17,7 @@
 @bg-koimona: #c049f8;
 @bg-koire: #817eff;
 @bg-lara: #f74770;
+@bg-services: #fbfbfb;
 
 body {
 	font-size: 14px;
@@ -299,6 +300,61 @@ i.fa-camera-retro {
 
 .works-row {
 	margin-top: 3%;
+}
+
+.services {
+	&-list {
+		list-style: none;
+			&-item {
+				display: block;
+				background-color: @bg-services;
+				margin: 5px auto;
+				width: 100px;
+				height: 100px;
+				text-align: right;
+			}
+	}
+	&-info {
+		h4 {
+			font-size: 30px;
+		}
+		p {
+			font-size: 16px;
+		}
+	}
+	&-line{
+		width: 60px;
+		height: 4px;
+		background-color: @base-red;
+		display: inline-block;
+		margin-bottom: 10px;
+		margin-top: 10px;
+	}
+	&-btn {
+		border: none;
+		margin-top: 45px;
+		color: @base-black;
+		border: 1px solid lighten(@base-black, 50%);
+		padding: 15px 55px;
+		-webkit-border-radius: 50px;
+		-moz-border-radius: 50px;
+		-ms-border-radius: 50px;
+		-o-border-radius: 50px;
+		border-radius: 50px;
+		background-color: @white;
+		.opn-reg;
+		font-size: 16px;
+		-webkit-box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);;
+		box-shadow: 0px 6px 14px 0px rgba(20, 20, 21, 0.09);
+	}
+
+}
+
+.panel-default>.panel-heading {
+	h4 {
+		color: @base-red;
+		.opn-bold;
+	}
 }
 
 
