--- a/css/style.less
+++ b/css/style.less
@@ -18,6 +18,7 @@
 @bg-koire: #817eff;
 @bg-lara: #f74770;
 @bg-services: #fbfbfb;
+@bg-footer: #f7f7f7;
 @yellow: #ffef3b;
 @gray: #adadad;
 
@@ -446,6 +447,26 @@ i.fa-camera-retro {
 
 .slick-dots {
 	bottom: -50px;
+}
+
+footer {
+	padding: 50px 0px;
+	background-color: @bg-footer;
+}
+
+.footer {
+	&-btn {
+		background-color: @white;
+  		box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.07);
+  		border: none;
+  		color: @base-black;
+  		padding: 15px 45px;
+  		-webkit-border-radius: 50px;
+  		-moz-border-radius: 50px;
+  		-ms-border-radius: 50px;
+  		-o-border-radius: 50px;
+  		border-radius: 50px;
+	}
 }
 
 
