--- a/css/style.css
+++ b/css/style.css
@@ -402,3 +402,19 @@ i.fa-camera-retro {
 .slick-dots {
   bottom: -50px;
 }
+footer {
+  padding: 50px 0px;
+  background-color: #f7f7f7;
+}
+.footer-btn {
+  background-color: #ffffff;
+  box-shadow: 0px 11px 20px 0px rgba(20, 20, 21, 0.07);
+  border: none;
+  color: #706b73;
+  padding: 15px 45px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  border-radius: 50px;
+}
