--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ header {
   min-height: 700px;
 }
 section {
-  padding-top: 10%;
-  padding-bottom: 10%;
+  padding-top: 6%;
+  padding-bottom: 6%;
 }
 .section-header {
   margin-bottom: 7%;
@@ -47,7 +47,7 @@ section {
 .main-logo-border {
   width: 155px;
   height: 55px;
-  border: 3px solid #706b73;
+  border: 3px solid #ffffff;
   text-align: center;
   line-height: 49px;
 }
@@ -55,7 +55,7 @@ section {
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
   font-size: 36px;
-  color: #706b73;
+  color: #ffffff;
 }
 .main-logo-border p:first-letter {
   color: #fc7b5d;
@@ -63,6 +63,7 @@ section {
 .main-text {
   margin-top: 3%;
   text-align: center;
+  color: #ffffff;
 }
 .main-text h1 {
   font-size: 50px;
@@ -424,6 +425,60 @@ footer {
   -o-border-radius: 50px;
   border-radius: 50px;
 }
+header {
+  position: relative;
+}
+.no-video .video-container video,
+.touch .video-container video {
+  display: none;
+}
+.no-video .video-container .poster,
+.touch .video-container .poster {
+  display: block !important;
+}
+.video-container {
+  position: absolute;
+  bottom: 0%;
+  left: 0%;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background: #000;
+}
+.video-container .poster img {
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+}
+.video-container .filter {
+  z-index: 100;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.4);
+  width: 100%;
+}
+.video-container video {
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+}
+.video-container video.fillWidth {
+  width: 100%;
+}
+.layer img {
+  width: 350px;
+}
+#layer-1 {
+  margin-left: 1%;
+  margin-top: 1%;
+}
+#layer-2 {
+  margin-left: 30%;
+  margin-top: 1%;
+}
+#layer-3 {
+  margin-left: 60%;
+  margin-top: 1%;
+}
 @media (min-width: 0px) and (max-width: 480px) {
   .main-text h1 {
     font-size: 30px;
@@ -447,6 +502,9 @@ footer {
   .services-info img {
     margin: 30px auto;
   }
+  .video-container {
+    display: none;
+  }
 }
 @media (min-width: 481px) and (max-width: 767px) {
   .process-box {
@@ -465,6 +523,9 @@ footer {
   .services-info img {
     margin: 30px auto;
   }
+  .video-container {
+    display: none;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .process-box {
@@ -482,6 +543,9 @@ footer {
   }
   .services-info img {
     margin: 30px auto;
+  }
+  .video-container {
+    display: none;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
