--- a/css/style.less
+++ b/css/style.less
@@ -40,8 +40,8 @@ header {
 }
 
 section {
-	padding-top: 10%;
-	padding-bottom: 10%;
+	padding-top: 6%;
+	padding-bottom: 6%;
 }
 .section-header {
 	margin-bottom: 7%;
@@ -64,13 +64,13 @@ section {
 	&-logo-border {
 		width: 155px;
 		height: 55px;
-		border: 3px solid @base-black;
+		border: 3px solid @white;
 		text-align: center;
 		line-height: 49px;
 		p {
 			.opn-bold;
 			font-size: 36px;
-			color: @base-black;
+			color: @white;
 			&:first-letter{
 				color: lighten(@base-red, 5%);
 			}
@@ -79,6 +79,7 @@ section {
 	&-text {
 		margin-top: 3%;
 		text-align: center;
+		color: @white;
 		h1 {
 			font-size: 50px;
 			.opn-bold;
@@ -247,6 +248,7 @@ section {
 		background-color: @bg-lara;
 	}
 }
+
 i.fa-camera-retro {
 	-webkit-transform: rotate(-15deg);
 	-ms-transform: rotate(-15deg);
@@ -435,7 +437,6 @@ i.fa-camera-retro {
 	right: 0;
 }
 
-
 .slick-dots li button:before {
 	width: 22px;
 	height: 7px;
@@ -477,6 +478,72 @@ footer {
 	}
 }
 
+header {
+	position: relative;
+}
+.no-video .video-container video,
+.touch .video-container video {
+    display: none;
+}
+
+.no-video .video-container .poster,
+.touch .video-container .poster {
+    display: block !important;
+}
+
+.video-container {
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background: #000;
+}
+
+.video-container .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
+
+.video-container .filter {
+    z-index: 100;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+}
+
+.video-container video {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
+
+.video-container video.fillWidth {
+    width: 100%;
+}
+
+.layer {
+	img {
+		width: 350px;
+	}
+}
+#layer-1 {
+	margin-left: 1%;
+	margin-top: 1%;
+}
+#layer-2 {
+	margin-left: 30%;
+	margin-top: 1%;
+}
+#layer-3 {
+	margin-left: 60%;
+	margin-top: 1%;
+}
+
+
+
 @media (min-width: 0px) and (max-width: 480px) {
 	.main {
 		&-text {
@@ -510,6 +577,9 @@ footer {
 			margin: 30px auto;
 		}
 	}
+	.video-container {
+		display: none;
+	}
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
@@ -531,6 +601,9 @@ footer {
 		img {
 			margin: 30px auto;
 		}
+	}
+	.video-container {
+		display: none;
 	}
 }
 
@@ -554,6 +627,10 @@ footer {
 			margin: 30px auto;
 		}
 	}
+	.video-container {
+		display: none;
+	}
+
 
 }
 
